# docker.datascience

./: .gitignore  Dockerfile  Dockerfile.base  Dockerfile.dask  Dockerfile.keras  Dockerfile.pycaret  Dockerfile.pymc  Dockerfile.pymc3  Dockerfile.sklearn  Makefile  README.md  debian-requirements.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker-publish.yml
