[tool.poetry]
name = "docker.datascience"
version = "6.0.0"
description = ""
authors = ["Humberto STEIN SHIROMOTO <h.stein.shiromoto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Deprecated = "^1.2.13"
python-dotenv = "^1.0.0"
PyYAML = "^6.0"
typeguard = "^3.0.2"

[tool.poetry.dev-dependencies]
icecream = "^2.1.3"
ipykernel = "^6.22.0"
jupyter = "^1.0.0"
jupyterlab = "^3.6.3"
pytest = "^7.3.1"
rope = "^1.7.0"
watermark = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
